# xps-conversation-producer

./: .dockerignore  Cargo.toml  Dockerfile  README.md  env.example
.github/workflows/: github-pages.yml  github-pages.ytml
abi/: MessageSender.json
appenv/: Cargo.toml
appenv/src/: lib.rs
consumer/: Cargo.toml
consumer/src/: main.rs
conversation/: Cargo.toml
conversation/src/: lib.rs
producer/: Cargo.toml
producer/src/: main.rs
