[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conversation = { path = "../conversation" }
appenv = { path = "../appenv" }
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"
anyhow = "1.0.75"
lipsum = "0.9.0"
tracing = "0.1.40"
ethabi = "18.0.0"
