[package]
name = "conversation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ethers = { version="2.0.10", features = ["ws", "abigen"] }
serde = "1.0"
serde_json = "1.0"
log = "0.4.20"
web-sys = "0.3.65"
tracing = "0.1.40"
ethabi = "18.0.0"
sha3 = "0.10.8"
hex = "0.4.3"
